--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+set -g default-terminal "screen-256color"
+
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
 bind-key C-a last-window
