--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,6 +65,8 @@ set -g status-fg white
 set -g window-status-current-bg white
 set -g window-status-current-fg black
 set -g window-status-current-attr bold
+set -g window-status-activity-style none
+set -g window-status-bell-style none
 set -g status-interval 60
 set -g status-left-length 30
 set -g status-left '#[fg=green](#S) #(whoami) '
