--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,7 @@ set -g history-limit 10000
 setw -g mode-keys vi
 setw -g monitor-activity on
 
+bind c new-window -c "#{pane_current_path}"
 bind-key v split-window -h
 bind-key s split-window -v
 
