--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 set -g default-terminal "screen-256color"
 
+# Fix ssh agent when tmux is detached
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
 bind-key C-a last-window
