fix tmux to support fixed ssh auth

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -g default-terminal "screen-256color"
 
 # Fix ssh agent when tmux is detached
+set -g update-environment -r
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
 # C-b is not acceptable -- Vim uses it
